--- a/src/app/new-orders/new-orders.component.html
+++ b/src/app/new-orders/new-orders.component.html
@@ -1,4 +1,4 @@
-<div class="requests p-3" *ngIf="(filteredOrders$ | async) as orders">
+<div class="requests p-3" *ngIf="(filteredOrders$ | async) && (filteredOrders$ | async)!.length > 0">
   <!-- Order Type Tabs -->
   <h4>الطلبات</h4>
   <ul class="nav nav-requests mb-4 px-0" role="tablist">
@@ -33,21 +33,13 @@
     </span>
   </div>
 
-  <!-- Syncing State -->
-  <div *ngIf="syncing" class="alert alert-info d-flex align-items-center justify-content-center mb-3" role="alert">
-    <div class="spinner-border spinner-border-sm text-primary me-2" role="status">
-      <span class="visually-hidden">جاري المزامنة...</span>
-    </div>
-    <span class="fw-bold">جارى مراجعة البيانات...</span>
-  </div>
-
   <!-- Orders Content -->
   <div class="tab-content">
     <ng-container *ngIf="selectedStatus === 'static'; else dynamicOrders">
 
       <!-- Static Orders -->
-      <div class="row m-0" *ngIf="(orders?.length || 0) > 0">
-        <div *ngFor="let order of (orders | slice:0:visibleCountStatic) || []; trackBy: trackByOrderId"
+      <div class="row m-0">
+        <div *ngFor="let order of (filteredOrders$ | async) || []; trackBy: trackByOrderId"
           class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-4">
           <!-- Order Card -->
           <div class="card p-2 d-flex flex-column justify-content-between h-100"
@@ -81,7 +73,7 @@
                 <i class="fa-solid fa-chair fs-6 me-1"></i>
                 <small class="fw-bold">طاولة</small>
               </div>
-              <small class="fw-bold">{{ order.tableNumber   }}</small>
+              <small class="fw-bold">{{ order.tableNumber }}</small>
             </div>
             <div class="date d-flex justify-content-between mb-1">
               <h6 class="text-muted">
@@ -99,7 +91,7 @@
             <div class="num-items d-flex justify-content-between mb-1 border-bottom">
               <h6 class="text-muted"><small>عدد العناصر</small></h6>
               <h6 class="text-muted">
-                <small>{{ order.order_items_count  }}</small>
+                <small>{{ order.order_items_count }}</small>
               </h6>
             </div>
 
@@ -198,8 +190,8 @@
 
     <!-- Dynamic Orders -->
     <ng-template #dynamicOrders>
-      <div class="row m-0" *ngIf="(orders?.length || 0) > 0">
-        <div *ngFor="let order of (orders | slice:0:visibleCountDynamic) || []; trackBy: trackByOrderId"
+      <div class="row m-0">
+        <div *ngFor="let order of (filteredOrders$ | async) || []; trackBy: trackByOrderId"
           class="col-xl-4 col-md-6 col-sm-12 mb-4">
 
           <!-- Dynamic Order Card -->
@@ -219,7 +211,7 @@
               <div class="status d-flex justify-content-between mb-1">
                 <h5><span class="badge bg-main">{{ getOrderTypeLabel(order.order_details.order_type) }}</span></h5>
                 <div>
-                  @if(order.order_details.status != 'cancelled' && order.order_details.payment_status == "unpaid" && order.order_details.order_type != "talabat"){
+                  @if(order.order_details.status != 'cancelled' && order.order_details.payment_status == "unpaid"){
                   <span class="badge text-dark">
                     <button type="button" class="bg-main rounded-circle p-0 border-0 ms-1"
                       style="width: 20px; height: 20px" (click)="continueOrder(order)">
@@ -242,7 +234,7 @@
                 <div class="d-flex align-items-center gap-1">
                   <small class="fw-bold">طاولة</small>
                 </div>
-                <small class="fw-bold">{{ order.order_details.table_number ?? order.order_details.table_id  }}</small>
+                <small class="fw-bold">{{ order.order_details.table_number }}</small>
               </div>
               <div class="d-flex align-items-center justify-content-end my-2">
                 @if (order.order_details.payment_status == "unpaid") {
@@ -300,14 +292,14 @@
               <div class="num-items d-flex justify-content-between mb-1 border-bottom">
                 <h6 class="text-muted"><small>عدد العناصر</small></h6>
                 <h6 class="text-muted">
-                  <small>{{ order.order_details.order_items_count  }}</small>
+                  <small>{{ order.order_details.order_items_count }}</small>
                 </h6>
               </div>
 
               <div class="order-items border-bottom py-1 mb-1 flex-grow-1"
                 [ngClass]="order.order_items.length > 2 ? 'overflow-scroll' :'overflow-visible'">
                 <div class="d-flex justify-content-between align-items-center align-items-md-center gap-1 px-1 mb-2"
-                  *ngFor="let item of order.order_items; trackBy: trackByItemId">
+                  *ngFor="let item of order.order_items">
                   <!-- Item Name & Quantity -->
 
                   <h6 class="mb-0 fs-6 text-break">
@@ -354,7 +346,7 @@
                       <i [ngClass]="getStatusIcon(item?.dish_status)" class="me-1"></i>
                       {{ getStatusText(item.dish_status) }}
                     </span>
-                    @if (order.order_details.payment_status == 'unpaid' && order.order_details.order_type != "talabat")
+                    @if (order.order_details.payment_status == 'unpaid')
                     {
                     @if(item?.dish_status == 'pending' || item?.dish_status == 'inprogress' ){
                     <div class="dropdown">
@@ -442,18 +434,15 @@
                 </button>
                 } -->
 
-                <button
-                  *ngIf="order.order_details.payment_status == 'unpaid' && order.order_details.status === 'pending' && order.order_details.order_type != 'talabat'"
-                  type="button" class="btn btn-transparent w-100 py-2"
-                  (click)="openOrderModal(order)">
+                <button type="button" class="btn btn-transparent w-100 py-2"
+                      (click)="openOrderModal(order)">
+                <span *ngIf="order.order_details.payment_status == 'unpaid' && order.order_details.status === 'pending'">
                   حذف الطلب
-                </button>
-                <button
-                  *ngIf="!(order.order_details.payment_status == 'unpaid' && order.order_details.status === 'pending') && order.order_details.order_type != 'talabat'"
-                  type="button" class="btn btn-transparent w-100 py-2"
-                  (click)="openOrderModal(order)">
+                </span>
+                <span *ngIf="!(order.order_details.payment_status == 'unpaid' && order.order_details.status === 'pending')">
                   فاتورة مرتجع
-                </button>
+                </span>
+              </button>
 
                 <!-- <div class="modal fade" [id]="'modal-' + order.order_details.order_id" tabindex="-1"
                   aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -652,154 +641,6 @@
             <span *ngIf="!removeLoading">نعم</span>
           </button>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- 🔄 Unified order action modal (return invoice or delete unpaid pending) -->
-<div class="modal fade" id="orderModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content p-3">
-      <div class="p-3 d-flex justify-content-end">
-        <button type="button" class="btn text-white rounded" data-bs-dismiss="modal">
-          <i class="fa-solid fa-xmark"></i>
-        </button>
-      </div>
-      <p class="fs-4 fw-bold text-center" *ngIf="selectedOrder as so">
-        <ng-container *ngIf="!(so.order_details.payment_status == 'unpaid' && so.order_details.status === 'pending'); else deleteTitle">
-          فاتورة مرتجع
-        </ng-container>
-        <ng-template #deleteTitle>
-          حذف الطلب
-        </ng-template>
-      </p>
-
-      <div *ngIf="selectedOrder as so">
-        <div>
-          <p-accordion value="0">
-            <p-accordion-panel value="0">
-              <p-accordion-header> تفاصيل الطلب </p-accordion-header>
-              <p-accordion-content>
-                <div class="d-flex justify-content-between align-items-center">
-                  <p>رقم الطلب</p>
-                  <p class="text-muted">{{ so.order_details.order_number }}</p>
-                </div>
-                <div class="my-2" *ngFor="let item of so.order_items; let i = index" >
-                  <div class="d-flex justify-content-between align-items-center" *ngIf="item.dish_status !== 'cancel'">
-                    <div>
-                      <span>
-                        <input class="form-check-input" type="checkbox" [(ngModel)]="item.isChecked" (ngModelChange)="onItemCheckToggle(item, $event)" [id]="'check-' + i">
-                      </span>
-                      <span>
-                        x {{ item.selectedQuantity ?? item.quantity }}
-                        <span>{{ item.dish_name }}</span>
-                      </span>
-                    </div>
-                    <div class="d-flex align-items-center justify-content-between">
-                      <span class="px-3 fw-bold">{{ item.total_dish_price }} {{ so.currency_symbol }}</span>
-                      <div class="qty" *ngIf="item.isChecked">
-                        <span class="dec minus" (click)="decreaseItem(item, i)">
-                          <i class="fa fa-minus" aria-hidden="true"></i>
-                        </span>
-                        <span class="num mx-2">{{ item.selectedQuantity ?? item.quantity }}</span>
-                        <span class="inc plus" [class.disabled]="(item.selectedQuantity ?? item.quantity) >= item.quantity" (click)="increaseItem(item, i)">
-                          <i class="fa fa-plus" aria-hidden="true"></i>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="d-flex align-items-center justify-content-between yellow my-3 px-3 pt-2 rounded-3" *ngIf="item.dish_status !== 'cancel'">
-                    <ng-container *ngIf="!(so.order_details.payment_status == 'unpaid' && so.order_details.status === 'pending'); else deleteLabel">
-                      <p>المرتجع</p>
-                    </ng-container>
-                    <ng-template #deleteLabel>
-                      <p>حذف</p>
-                    </ng-template>
-                    <p>{{ item.quantity - (item.selectedQuantity ?? item.quantity) }}</p>
-                  </div>
-                </div>
-              </p-accordion-content>
-            </p-accordion-panel>
-          </p-accordion>
-        </div>
-
-        <div *ngIf="so.order_details.hasCoupon" class="mt-3 bg-lightgray">
-          <h6 class="fw-bold main-color">
-            <img src="assets/images/coupon-icon.png" alt="" />
-            كوبون خصم
-          </h6>
-        </div>
-
-        <div class="my-4">
-          <label for="cancelReasonInput" class="form-label fw-bold"> اخبرنا السبب </label>
-          <textarea id="cancelReasonInput" class="form-control" rows="3" placeholder="اخبرنا السبب" [(ngModel)]="cancelReason"></textarea>
-        </div>
-
-        <div>
-          <div *ngIf="cancelErrorMessage" class="alert alert-danger text-center my-2">{{ cancelErrorMessage }}</div>
-          <div *ngIf="cancelSuccessMessage" class="alert alert-success text-center my-2">{{ cancelSuccessMessage }}</div>
-          <button type="button" class="btn w-100 my-2 py-2" (click)="submitCancelRequest(so)" [disabled]="isSubmitting">
-            <span *ngIf="isSubmitting" class="spinner-border spinner-border-sm me-2"></span>
-            <ng-container *ngIf="!(so.order_details.payment_status == 'unpaid' && so.order_details.status === 'pending'); else deleteBtn">
-              {{ isSubmitting ? 'جاري الإرسال...' : 'إرسال طلب المرتجع' }}
-            </ng-container>
-            <ng-template #deleteBtn>
-              {{ isSubmitting ? 'جاري الحذف...' : 'حذف الطلب' }}
-            </ng-template>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<!-- Delete Confirmation Modal -->
-<div class="modal fade" id="deleteOrderModal" tabindex="-1"
-  aria-labelledby="deleteOrderModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header border-0">
-        <button type="button" class="btn-close" data-bs-dismiss="modal"
-          aria-label="إغلاق"></button>
-      </div>
-      <div class="modal-body">
-        <img class="cancel-icon" src="assets/images/ix_error-filled.png" />
-        <h1 class="modal-title fs-5 text-center my-3">هل أنت متأكد من حذف هذا
-          الطلب</h1>
-        <div class="d-flex justify-content-center">
-          <button type="button" class="btn reversed main-color w-50 mx-3"
-            data-bs-dismiss="modal">إلغاء</button>
-          <button type="button" class="btn w-50 mx-3"
-            (click)="confirmDelete()">تأكيد الحذف</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- <ng-template #messageModal let-modal>
-    <p class="alert text-center fw-bold mb-0" [ngClass]="messageType === 'success' ? 'alert-success' : 'alert-danger'">{{ message }}</p>
-</ng-template> -->
-<ng-template #messageModal let-modal>
-  <div class="d-flex justify-content-center align-items-center h-100">
-    <p class="alert text-center fw-bold mb-0 w-100"
-      [ngClass]="messageType === 'success' ? 'alert-success' : 'alert-danger'">
-      {{ message }}
-    </p>
-  </div>
-</ng-template>
-
-<div class="modal fade" id="successMessageModal" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content ">
-      <div class="modal-header border-0">
-        <button type="button" class="btn-close" data-bs-dismiss="modal"
-          aria-label="Close"></button>
-      </div>
-      <div class="modal-body text-center">
-        <img class="success-icon" src="assets/images/donee.png" />
-        <h1 class="modal-title fs-5 text-center my-3">{{successMessage}}</h1>
       </div>
     </div>
   </div>
