--- a/src/app/pills/pills.component.html
+++ b/src/app/pills/pills.component.html
@@ -4,7 +4,8 @@
 
     <!-- Search Bar -->
     <div class="input-group w-100 mx-auto my-3">
-      <input [(ngModel)]="searchText" (input)="filterPills()" placeholder="ابحث ب رقم الطلب"
+      <input [(ngModel)]="searchText" (input)="filterPills()"
+        placeholder="ابحث ب رقم الطلب"
         class="form-control rounded-start" aria-describedby="search-icon" />
       <span class="input-group-text">
         <i class="fa-solid fa-magnifying-glass"></i>
@@ -17,7 +18,8 @@
   </li> -->
 
       <li class="nav-item flex-fill mx-1">
-        <button class="nav-link w-100 d-flex align-items-center" [ngClass]="{ active: orderTypeFilter === 'dine-in' }"
+        <button class="nav-link w-100 d-flex align-items-center"
+          [ngClass]="{ active: orderTypeFilter === 'dine-in' }"
           (click)="orderTypeFilter = 'dine-in'; filterPills()">
           فى المطعم
           <figure class="mb-0 me-2">
@@ -26,7 +28,8 @@
         </button>
       </li>
       <li class="nav-item flex-fill mx-1">
-        <button class="nav-link w-100 d-flex align-items-center" [ngClass]="{ active: orderTypeFilter === 'Takeaway' }"
+        <button class="nav-link w-100 d-flex align-items-center"
+          [ngClass]="{ active: orderTypeFilter === 'Takeaway' }"
           (click)="orderTypeFilter = 'Takeaway'; filterPills()">
           إستلام
           <figure class="mb-0 me-2">
@@ -35,7 +38,8 @@
         </button>
       </li>
       <li class="nav-item flex-fill mx-1 delivery">
-        <button class="nav-link w-100 d-flex align-items-center" [ngClass]="{ active: orderTypeFilter === 'Delivery' }"
+        <button class="nav-link w-100 d-flex align-items-center"
+          [ngClass]="{ active: orderTypeFilter === 'Delivery' }"
           (click)="orderTypeFilter = 'Delivery'; filterPills()">
           توصيل
           <figure class="mb-0 me-2">
@@ -45,7 +49,8 @@
       </li>
 
       <li class="nav-item flex-fill mx-1">
-        <button class="nav-link w-100 d-flex align-items-center" [ngClass]="{ active: orderTypeFilter === 'talabat' }"
+        <button class="nav-link w-100 d-flex align-items-center"
+          [ngClass]="{ active: orderTypeFilter === 'talabat' }"
           (click)="orderTypeFilter = 'talabat'; filterPills()">
           طلبات
           <figure class="mb-0 me-2">
@@ -58,8 +63,11 @@
 
     <!-- Pills Status Navigation -->
     <ul class="nav nav-pills mb-4 px-0" id="pills-tab21" role="tablist">
-      <li class="nav-item" role="presentation" *ngFor="let statusGroup of filteredPillsByStatus; let i = index; ">
-        <button class="nav-link sub" [ngClass]="{ active: selectedStatus === i }" (click)="selectStatusGroup(i)"
+      <li class="nav-item" role="presentation"
+        *ngFor="let statusGroup of filteredPillsByStatus; let i = index; ">
+        <button class="nav-link sub"
+          [ngClass]="{ active: selectedStatus === i }"
+          (click)="selectStatusGroup(i)"
           role="tab" [attr.aria-controls]="'pills-' + statusGroup.status">
           <span>
             {{ getTranslatedStatus(statusGroup.status) }} ({{
@@ -69,21 +77,29 @@
       </li>
     </ul>
 
-    <div class="tab-content second-sub" id="pills-tabContent6" aria-live="polite">
-      <div *ngFor="let statusGroup of filteredPillsByStatus; let i = index" class="tab-pane fade"
-        [ngClass]="{ 'show active': selectedStatus === i }" [id]="'pills-' + statusGroup.status" role="tabpanel"
+    <div class="tab-content second-sub" id="pills-tabContent6"
+      aria-live="polite">
+      <div *ngFor="let statusGroup of filteredPillsByStatus; let i = index"
+        class="tab-pane fade"
+        [ngClass]="{ 'show active': selectedStatus === i }"
+        [id]="'pills-' + statusGroup.status" role="tabpanel"
         [attr.aria-labelledby]="'pills-' + statusGroup.status + '-tab'">
 
         <!-- <div class="row m-0 d-flex align-items-stretch"> -->
-        <div class="row m-0 d-flex align-items-stretch" infiniteScroll [infiniteScrollDistance]="0.9"
-          [infiniteScrollThrottle]="1" (scrolled)="onScroll()" [scrollWindow]="true">
+        <div class="row m-0 d-flex align-items-stretch"
+          infiniteScroll
+          [infiniteScrollDistance]="0.9"
+          [infiniteScrollThrottle]="1"
+          (scrolled)="onScroll()"
+          [scrollWindow]="true">
 
           <!-- <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-4" *ngFor="let pill of statusGroup.pills; let i = index"
             [attr.id]="'pill-' + pill.order_number"> -->
           <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-4"
-            *ngFor="let pill of getPillsForStatus(statusGroup); trackBy: trackByPillId">
+            *ngFor="let pill of getPillsForStatus(statusGroup);">
 
-            <div class="card pill-card p-3 d-flex flex-column h-100" [id]="'pill-' + pill.order_number"
+            <div class="card pill-card p-3 d-flex flex-column h-100"
+              [id]="'pill-' + pill.order_number"
               [class.highlight-order]="'pill-' + pill.order_number === highlightedPillId">
 
               <div class="d-flex flex-wrap justify-content-between">
@@ -101,7 +117,8 @@
               }
               <div class="d-flex align-items-center justify-content-end my-2">
                 @if (pill.payment_status == "unpaid") {
-                <small class="rounded-circle bg-main d-flex justify-content-center align-items-center text-white ms-1"
+                <small
+                  class="rounded-circle bg-main d-flex justify-content-center align-items-center text-white ms-1"
                   style="width: 16px;height: 16px;">
                   <i class="fa-solid fa-xmark fs-6"></i>
                 </small>
@@ -123,16 +140,18 @@
               <div class="d-flex flex-column text-center gap-2 mt-auto">
 
                 <a class="btn-static btn-static-main text-white w-100 py-2"
-                  [routerLink]="'/pill-details/' + pill.invoice_id" routerLinkActive="active"
+                  [routerLink]="'/pill-details/' + pill.invoice_id"
+                  routerLinkActive="active"
                   [routerLinkActiveOptions]="{ exact: true }">
                   تفاصيل الفاتورة
                 </a>
                 @if ((pill.invoice_type != 'credit_note') &&
                 (pill.invoice_print_status !== 'done') &&
-                (pill.invoice_print_status !== 'cancelled')&&
-                (orderTypeFilter !== 'talabat')) {
-                <a class="btn-static text-main btn-transparent border-1 w-100 py-2"
-                  [routerLink]="'/pill-edit/' + pill.invoice_id" routerLinkActive="active"
+                (pill.invoice_print_status !== 'cancelled')) {
+                <a
+                  class="btn-static text-main btn-transparent border-1 w-100 py-2"
+                  [routerLink]="'/pill-edit/' + pill.invoice_id"
+                  routerLinkActive="active"
                   [routerLinkActiveOptions]="{ exact: true }">
                   تعديل الفاتورة
                 </a>
