--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -8,12 +8,10 @@
   </button>
 
 </div>
-<div class="input-wrapper form-control" >
+<div class="input-wrapper form-control">
   <i class="fa-solid fa-magnifying-glass text-muted"></i>
-  <input id="search" type="text" placeholder="ابحث..." [(ngModel)]="searchOrderNumber" (ngModelChange)="filterOrders()" />
-  <!-- <input type="text" placeholder="ابحث..." [(ngModel)]="searchOrderNumber" (ngModelChange)="filterOrders()" /> -->
+  <input type="text" placeholder="ابحث..." [(ngModel)]="searchOrderNumber" (ngModelChange)="filterOrders()" />
 </div>
-
 <div class="categories py-3"  appShowLoaderUntilPageLoaded [isReady]="isAllLoading">
   <ul class="nav nav-pills mb-3 px-0 align-items-center" id="pills-tab" role="tablist">
     <!-- <li class="nav-item mb-2" role="presentation">
