--- a/src/app/pill-details/pill-details.component.html
+++ b/src/app/pill-details/pill-details.component.html
@@ -342,7 +342,7 @@
       </div>
 
       <!-- tips -->
-    <div class="tips-section" *ngIf="invoiceTips.length > 0">
+    <div class="tips-section" *ngIf="invoiceTips.length > 0  && paymentStatus == 'paid'">
       <hr />
       <div *ngFor="let tip of invoiceTips" class="mb-3">
         <div class="d-flex justify-content-between px-2 mb-1">
