--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -502,7 +502,7 @@
                   <span>فاتوره مرتجع</span>
                 </button>
                 }
-                @else if(order.order_details.payment_status == 'unpaid' && order.order_details.status === 'pending') {
+                @else if(order.order_details.payment_status == 'unpaid' && order.order_details.status === 'pending'  && order.order_details.order_type != "talabat") {
                 <button type="button" class="btn btn-transparent w-100 py-2" data-bs-toggle="modal"
                   [attr.data-bs-target]="'#modal-' + order.order_details.order_id">
                   <span>
