--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -593,26 +593,26 @@
     </div>
 
   </div>
-  <p class="text-center fw-bold my-2 total"> طلبات التابع لطلبات</p>
+  <p class="text-center fw-bold my-2 total"> الطلبات التابعة لطلبات</p>
   <div class="border border-1 border-black">
     <div class="table-content">
       <span> العدد الاجمالى </span>
       <span>{{printingData?.talabatcount}} </span>
     </div>
     <div class="table-content">
-      <span> عدد الكاش للطلبات</span>
+      <span> عدد نقدية طلبات</span>
       <span>{{printingData?.talabat_cash_count}}</span>
     </div>
     <div class="table-content">
-      <span> مبيعات كاش للطلبات</span>
+      <span> مبيعات نقدية طلبات</span>
       <span>{{printingData?.talabatcash}} </span>
     </div>
     <div class="table-content">
-      <span> عدد الفيزا للطلبات</span>
+      <span> عدد اجل طلبات</span>
       <span>{{printingData?.talabat_visa_count}}</span>
     </div>
     <div class="table-content">
-      <span> مبيعات أجل للطلبات</span>
+      <span> مبيعات اجل طلبات</span>
       <span>{{printingData?.talabatvisa}} </span>
     </div>
 
