--- a/src/app/edit-order-modal/edit-order-modal.component.html
+++ b/src/app/edit-order-modal/edit-order-modal.component.html
@@ -146,7 +146,17 @@
                         <label for="note2">من فضلك اكتب ملاحظتك</label>
                     </div>
                 </div>
-                <button type="button" class="btn w-100 mt-3" (click)="editItem()">تعديل</button>
+                <button type="button" class="btn w-100 mt-3" (click)="editItem()"
+                [disabled]="isSubmitting">
+                 @if (isSubmitting) {
+    <span>
+      <i class="fa-solid fa-spinner fa-spin px-2"></i>
+      جاري التعديل...
+    </span>
+  } @else {
+    تعديل
+  }
+                </button>
 
             </div>
 
