--- a/src/app/pills/pills.component.html
+++ b/src/app/pills/pills.component.html
@@ -1,3 +1,9 @@
+@if (errorMessage) {
+<div class="alert alert-danger text-center my-3">
+  {{ errorMessage }}
+</div>
+}
+
 <div class="" appShowLoaderUntilPageLoaded [isReady]="loading">
   <!-- Pills Search and Navigation -->
   <div class="pills p-3">
